--- a/resume.tex
+++ b/resume.tex
@@ -71,7 +71,7 @@ Adaptive optics \\
 
 \section{\sc Service \&\\ Professional Activities}
 Member $-$ American Astronomical Society (AAS) \hfill 2015$-$present\\
-Member $-$ Society for Personality and Social Psychology (SPSP) \hfill 2017$-$present\\
+Member $-$ Society for Personality and Social Psychology (SPSP) \hfill 2017$-$2020\\
 Representative (student scientist) $-$ Annual GSFC Administrator's Congressional Visits \hfill 2016\\
 Local Organizing Committee $-$ 19th International Conference on Microlensing \hfill 2015\\
 
@@ -98,9 +98,9 @@ MATHCOUNTS ambadassor \& judge, TJ High School, VA \hfill 2013$-$2014 \\
 \textit{Development of the WFIRST Mass Measurement Method}, Keck 10m, assisted 2 nights \hfill 2019A \\
 
 \section{\sc Talks \&\\ Proceedings}
-\textbf{14 talks (3 invited$^{\dagger}$, 11 public)}\\
+\textbf{13 talks (2 invited$^{\dagger}$, 11 public)}\\
 \begin{etaremune}
-\item $^{\dagger}$``A Sub-Saturn Exoplanet Inside the Mass Desert Predicted by Core Accretion", University of Maryland, November 2020
+%\item $^{\dagger}$``A Sub-Saturn Exoplanet Inside the Mass Desert Predicted by Core Accretion", University of Maryland, November 2020
 \item ``Roman Space Telescope Mass-measurement Method Determines a Mass of $66 \pm 8M_{\Earth}$ for MOA-2009-BLG-319Lb", Chesapeake Bay Area Exoplanet Meeting (chExo) \#8, June 2020
 
 \item Dissertation Talk -- ``Direct Mass Measurements for Planets Discovered by Microlensing", AAS 235, January 2020
