Fix appointment start date, kapa service title.

--- a/resume.tex
+++ b/resume.tex
@@ -51,7 +51,7 @@ Berkeley, CA 94720       & \hyperlink{http://w.astro.berkeley.edu/~sean.terry}{h
 
 \section{\sc Appointments}
 %%%%%%
-{\bf Postdoctoral Scholar}, University of California, Berkeley  \hfill      {October 2020 $-$ Present}\\
+{\bf Postdoctoral Scholar}, University of California, Berkeley  \hfill      {November 2020 $-$ Present}\\
 %%%%%%
 
 
@@ -70,7 +70,7 @@ Adaptive optics \\
 
 
 \section{\sc Service \&\\ Professional Activities}
-Project Scientist $-$ Keck All-Sky Precision Adaptive Optics (KAPA) \hfill 2020$-$present\\
+Project Science Team $-$ Keck All-Sky Precision Adaptive Optics (KAPA) \hfill 2020$-$present\\
 Member $-$ American Astronomical Society (AAS) \hfill 2015$-$present\\
 Member $-$ Society for Personality and Social Psychology (SPSP) \hfill 2017$-$2020\\
 Representative (student scientist) $-$ Annual GSFC Administrator's Congressional Visits \hfill 2016\\
