--- a/resume.tex
+++ b/resume.tex
@@ -73,7 +73,8 @@ Adaptive optics \\
 Project Science Team $-$ Keck All-Sky Precision Adaptive Optics (KAPA) \hfill 2020$-$present\\
 Member $-$ American Astronomical Society (AAS) \hfill 2015$-$present\\
 Member $-$ Society for Personality and Social Psychology (SPSP) \hfill 2017$-$2020\\
-Representative (student scientist) $-$ Annual GSFC Administrator's Congressional Visits \hfill 2016\\
+Member $-$ Seers Exoplanet Environments Collaboration (SEEC) \hfill 2016$-$2020\\
+Representative $-$ Annual GSFC Administrator's Congressional Visits \hfill 2016\\
 Local Organizing Committee $-$ 19th International Conference on Microlensing \hfill 2015\\
 
 \section{\sc Teaching Experience}
@@ -94,9 +95,11 @@ Proctor, GMU Public Observing Nights, Fairfax, VA \hfill 2013$-$2015 \\
 MATHCOUNTS ambadassor \& judge, TJ High School, VA \hfill 2013$-$2014 \\
 
 \section{\sc Observing}
-\textit{Confirmation of a Massive Black Hole Candidate}, Keck 10m, assisted 3 nights \hfill 2020B \\
-\textit{Astrometric Microlensing of Black Hole Candidates}, Keck 10m, assisted 1 night \hfill 2020A \\
-\textit{Development of the WFIRST Mass Measurement Method}, Keck 10m, assisted 2 nights \hfill 2019A \\
+Keck 10m (NIRC2/OSIRIS), 8 nights \hfill 2019-2021
+%\textit{Testing Core Accretion with Microlens Planet Host Star Masses}, Keck 10m, 2 nights \hfill 2021A \\
+%\textit{Confirmation of a Massive Black Hole Candidate}, Keck 10m, assisted 3 nights \hfill 2020B \\
+%\textit{Astrometric Microlensing of Black Hole Candidates}, Keck 10m, assisted 1 night \hfill 2020A \\
+%\textit{Development of the WFIRST Mass Measurement Method}, Keck 10m, assisted 2 nights \hfill 2019A \\
 
 \section{\sc Talks \&\\ Proceedings}
 \textbf{14 talks (3 invited$^{\dagger}$, 11 public)}\\
@@ -133,13 +136,13 @@ MATHCOUNTS ambadassor \& judge, TJ High School, VA \hfill 2013$-$2014 \\
 \textbf{9 total (4 first author)}\\
 $^{\dagger}$ = unrefereed publications \\
 \begin{etaremune}
-\item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``Using Keck Adaptive Optics to Break the Degeneracies for OGLE-2011-BLG-0950", 2020, \textit{in prep}
+\item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``Using Keck Adaptive Optics to Break the Degeneracies for OGLE-2011-BLG-0950", 2021, \textit{in prep}
 
-\item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``MOA-2009-BLG-319Lb: A Sub-Saturn Planet Inside the Predicted Mass Desert", 2020, \textit{submitted to AJ}
+\item Bhattacharya, A., Bennett, D. P., Beaulieu, J., \& 11 coauthors including \textbf{Terry, S. K.}, ``MOA-2007-BLG-400Lb: A Super-Jupiter Mass Planet Orbiting a Galactic Bulge K-dwarf Revealed by Keck Adaptive Optics Imaging", 2021, \textit{submitted to AJ}
 
-\item Bhattacharya, A., Bennett, D. P., Beaulieu, J., \& 11 coauthors including \textbf{Terry, S. K.}, ``MOA-2007-BLG-400Lb: A Super-Jupiter Mass Planet Orbiting a Galactic Bulge K-dwarf Revealed by Keck Adaptive Optics Imaging", 2020, \textit{submitted to AJ}
+\item Blackman, J., Beaulieu, J., Bennett, D. P., \& 11 coauthors including {\bf Terry, S. K.}, ``A Planetary Survivor of Its Host Star's Demise", 2021, \textit{submitted to Nature}
 
-\item Blackman, J., Beaulieu, J., Bennett, D. P., \& 11 coauthors including {\bf Terry, S. K.}, ``A Planetary Survivor of Its Host Star's Demise", 2020, \textit{submitted to Nature}
+\item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``MOA-2009-BLG-319Lb: A Sub-Saturn Planet Inside the Predicted Mass Desert", 2021, \textit{AJ}, 161, 54
 
 \item {\bf Terry, S. K.}, Barry, R. K., Bennett, D. P., Bhattacharya, A., Anderson, J., Penny, M. T., ``Comparing Observed Stellar Kinematics and Surface Densities in a Low Latitude Bulge Field to Galactic Population Synthesis Models", 2020, \textit{ApJ}, 889, 126
 
@@ -154,7 +157,7 @@ $^{\dagger}$ = unrefereed publications \\
 \end{etaremune}
 
 \section{\sc Skills}
-Fortran, Python, gnu, IDL, Git, Bash
+Fortran, Python, gnu, Git, Bash, IDL
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%
