--- a/resume.tex
+++ b/resume.tex
@@ -102,12 +102,10 @@ Keck 10m (NIRC2/OSIRIS), 8 nights \hfill 2019-2021
 %\textit{Development of the WFIRST Mass Measurement Method}, Keck 10m, assisted 2 nights \hfill 2019A \\
 
 \section{\sc Talks \&\\ Proceedings}
-\textbf{14 talks (3 invited$^{\dagger}$, 11 public)}\\
+\textbf{12 talks (3 invited$^{\dagger}$, 9 public)}\\
 \begin{etaremune}
 \item $^{\dagger}$``A Sub-Saturn Exoplanet Inside the Mass Desert Predicted by Core Accretion", University of Maryland, November 2020
 \item ``Roman Space Telescope Mass-measurement Method Determines a Mass of $66 \pm 8M_{\Earth}$ for MOA-2009-BLG-319Lb", Chesapeake Bay Area Exoplanet Meeting (chExo) \#8, June 2020
-
-\item Dissertation Talk -- ``Direct Mass Measurements for Planets Discovered by Microlensing", AAS 235, January 2020
 
 \item $^{\dagger}$``Comparing HST Observations of Bulge Stars to Galactic Population Synthesis Models in Preparation for the WFIRST Microlensing Survey", NASA GSFC, November 2019 
 \item $^{\dagger}$``Probing the Galactic Bulge Stellar Population as Precursor Science for WFIRST", University of Maryland, May 2018
@@ -126,14 +124,12 @@ Keck 10m (NIRC2/OSIRIS), 8 nights \hfill 2019-2021
 
 \item ``A New Near-IR Luminosity Function in the WFIRST Microlensing Fields", 19th International Conference on Gravitational Microlensing, January 2015
 
-\item ``Preliminary Research for WFIRST: Near-IR Luminosity Function in Galactic Bulge Fields", AAS Meeting 225, January 2015
-
 \item ``Light Curve Analysis of HD 189733b, WASP-33b and KELT-1b", George Mason University, November 2013
 
 \end{etaremune}
 
 \section{\sc Publications}
-\textbf{9 total (4 first author)}\\
+\textbf{10 total (5 first author)}\\
 $^{\dagger}$ = unrefereed publications \\
 \begin{etaremune}
 \item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``Using Keck Adaptive Optics to Break the Degeneracies for OGLE-2011-BLG-0950", 2021, \textit{in prep}
@@ -141,6 +137,8 @@ $^{\dagger}$ = unrefereed publications \\
 \item Bhattacharya, A., Bennett, D. P., Beaulieu, J., \& 11 coauthors including \textbf{Terry, S. K.}, ``MOA-2007-BLG-400Lb: A Super-Jupiter Mass Planet Orbiting a Galactic Bulge K-dwarf Revealed by Keck Adaptive Optics Imaging", 2021, \textit{submitted to AJ}
 
 \item Blackman, J., Beaulieu, J., Bennett, D. P., \& 11 coauthors including {\bf Terry, S. K.}, ``A Planetary Survivor of Its Host Star's Demise", 2021, \textit{submitted to Nature}
+
+\item $^{\dagger}${\bf Terry, S. K.}, ``Breaking a New Degeneracy in High Magnification Microlensing Events", 2021, \textit{American Astronomical Society}, 237, 218.03
 
 \item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``MOA-2009-BLG-319Lb: A Sub-Saturn Planet Inside the Predicted Mass Desert", 2021, \textit{AJ}, 161, 54
 
