Updates from Overleaf

--- a/resume.tex
+++ b/resume.tex
@@ -70,12 +70,16 @@ Adaptive optics \\
 
 
 \section{\sc Service \&\\ Professional Activities}
+\textbf{Professional Activities}\\
+Committee $-$ \textit{TESS} Cycle 4 Proposal Reviews \hfill 2021\\
 Project Science Team $-$ Keck All-Sky Precision Adaptive Optics (KAPA) \hfill 2020$-$present\\
+Representative $-$ Annual GSFC Administrator's Congressional Visits \hfill 2016\\
+Local Organizing Committee $-$ 19th International Conference on Microlensing \hfill 2015\\
+\\
+\textbf{Professional Memberships}\\
 Member $-$ American Astronomical Society (AAS) \hfill 2015$-$present\\
 Member $-$ Society for Personality and Social Psychology (SPSP) \hfill 2017$-$2020\\
 Member $-$ Seers Exoplanet Environments Collaboration (SEEC) \hfill 2016$-$2020\\
-Representative $-$ Annual GSFC Administrator's Congressional Visits \hfill 2016\\
-Local Organizing Committee $-$ 19th International Conference on Microlensing \hfill 2015\\
 
 \section{\sc Teaching Experience}
 Guest Lecturer (American U.), \textit{Complex Problems Seminar: Exoplanets in Fact \& Fiction} \hfill 2019 \\
