--- a/resume.tex
+++ b/resume.tex
@@ -56,8 +56,8 @@ Berkeley, CA 94720       & \hyperlink{http://w.astro.berkeley.edu/~sean.terry}{h
 
 
 \section{\sc Education}
-{\bf The Catholic University of America}, Ph.D., Astrophysics  \hfill 2020\\
-{\bf The Catholic University of America}, M.S., Astrophysics  \hfill 2018\\
+{\bf The Catholic University of America}, Ph.D., Physics  \hfill 2020\\
+{\bf The Catholic University of America}, M.S., Physics  \hfill 2018\\
 {\bf George Mason University}, B.S., Astronomy/Physics \hfill 2015\\
 {\bf Northern Virginia Community College}, A.S., Gen. Science \hfill 2012\\
 
@@ -71,7 +71,6 @@ Adaptive optics \\
 
 \section{\sc Service \&\\ Professional Activities}
 \textbf{Professional Activities}\\
-Committee $-$ \textit{TESS} Cycle 4 Proposal Reviews \hfill 2021\\
 Project Science Team $-$ Keck All-Sky Precision Adaptive Optics (KAPA) \hfill 2020$-$present\\
 Representative $-$ Annual GSFC Administrator's Congressional Visits \hfill 2016\\
 Local Organizing Committee $-$ 19th International Conference on Microlensing \hfill 2015\\
@@ -80,6 +79,9 @@ Local Organizing Committee $-$ 19th International Conference on Microlensing \hf
 Member $-$ American Astronomical Society (AAS) \hfill 2015$-$present\\
 Member $-$ Society for Personality and Social Psychology (SPSP) \hfill 2017$-$2020\\
 Member $-$ Seers Exoplanet Environments Collaboration (SEEC) \hfill 2016$-$2020\\
+\\
+\textbf{Panels and Reviews}\\
+\textit{TESS} Cycle 4 \hfill 2021\\
 
 \section{\sc Teaching Experience}
 Guest Lecturer (American U.), \textit{Complex Problems Seminar: Exoplanets in Fact \& Fiction} \hfill 2019 \\
@@ -98,8 +100,21 @@ CUA Booth, Annual Astronomy Festival on the Mall, Washington, DC \hfill 2015$-$2
 Proctor, GMU Public Observing Nights, Fairfax, VA \hfill 2013$-$2015 \\
 MATHCOUNTS ambadassor \& judge, TJ High School, VA \hfill 2013$-$2014 \\
 
+\section{\sc Grants \\ Awarded}
+Hubble Space Telescope Cycle 28 Grant \#16509 \\
+``\textit{Detection of the Astrometric Microlensing Signal by the Binary Black Hole Candidate MOA-2019-BLG-284}" \\
+Principle Investigator: S. K. Terry \\
+March 9, 2021 $-$ November, 2021
+
+Keck Semester 2021A \\
+``\textit{Testing Core Accretion with Microlens Planet Host Star Masses}" \\
+Principle Investigator: D. P. Bennett\\
+May 17, 2021 $-$ July 13, 2021
+
 \section{\sc Observing}
-Keck 10m (NIRC2/OSIRIS), 8 nights \hfill 2019-2021
+HST (WFC3/UVIS), 4 orbits \hfill 2021\\
+Keck 10m (NIRC2/OSIRIS), 8 nights \hfill 2019$-$2021\\
+GMU 0.8m, 24 nights \hfill 2013$-$2015 \\
 %\textit{Testing Core Accretion with Microlens Planet Host Star Masses}, Keck 10m, 2 nights \hfill 2021A \\
 %\textit{Confirmation of a Massive Black Hole Candidate}, Keck 10m, assisted 3 nights \hfill 2020B \\
 %\textit{Astrometric Microlensing of Black Hole Candidates}, Keck 10m, assisted 1 night \hfill 2020A \\
@@ -128,7 +143,7 @@ Keck 10m (NIRC2/OSIRIS), 8 nights \hfill 2019-2021
 
 \item ``A New Near-IR Luminosity Function in the WFIRST Microlensing Fields", 19th International Conference on Gravitational Microlensing, January 2015
 
-\item ``Light Curve Analysis of HD 189733b, WASP-33b and KELT-1b", George Mason University, November 2013
+\item ``Light Curve Analysis of HD 189733b, WASP-33b and KELT-1b", George Mason University, November 2013 \\
 
 \end{etaremune}
 
@@ -154,12 +169,12 @@ $^{\dagger}$ = unrefereed publications \\
 
 \item Bennett, D. P., Bhattacharya, A., Anderson, J., \& 15 coauthors including {\bf Terry, S. K.}, ``Confirmation of the Planetary Microlensing Signal and Star and Planet Mass Determinations for Event OGLE-2005-BLG-169", 2015, \textit{ApJ}, 808, 169
 
-\item $^{\dagger}$Gilbert, E., {\bf Terry, S. K.}, Pfeifle, R, ``A New Luminosity Function for Stars in the Galactic Bulge", 2015, \textit{American Astronomical Society}, 225, 102.02
+\item $^{\dagger}$Gilbert, E., {\bf Terry, S. K.}, Pfeifle, R, ``A New Luminosity Function for Stars in the Galactic Bulge", 2015, \textit{American Astronomical Society}, 225, 102.02 \\
 
 \end{etaremune}
 
 \section{\sc Skills}
-Fortran, Python, gnu, Git, Bash, IDL
+Python, Fortran, IDL, gnu, Git, Bash
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%
