add: panels/reviews, grants. update: observing

--- a/resume.tex
+++ b/resume.tex
@@ -104,7 +104,7 @@ MATHCOUNTS ambadassor \& judge, TJ High School, VA \hfill 2013$-$2014 \\
 Hubble Space Telescope Cycle 28 Grant \#16509 \\
 ``\textit{Detection of the Astrometric Microlensing Signal by the Binary Black Hole Candidate MOA-2019-BLG-284}" \\
 Principle Investigator: S. K. Terry \\
-March 9, 2021 $-$ November, 2021
+March 9, 2021 $-$ November 31, 2021
 
 Keck Semester 2021A \\
 ``\textit{Testing Core Accretion with Microlens Planet Host Star Masses}" \\
