update Blackman et. al. 2021 title

--- a/resume.tex
+++ b/resume.tex
@@ -155,7 +155,7 @@ $^{\dagger}$ = unrefereed publications \\
 
 \item Bhattacharya, A., Bennett, D. P., Beaulieu, J., \& 11 coauthors including \textbf{Terry, S. K.}, ``MOA-2007-BLG-400Lb: A Super-Jupiter Mass Planet Orbiting a Galactic Bulge K-dwarf Revealed by Keck Adaptive Optics Imaging", 2021, \textit{submitted to AJ}
 
-\item Blackman, J., Beaulieu, J., Bennett, D. P., \& 11 coauthors including {\bf Terry, S. K.}, ``A Planetary Survivor of Its Host Star's Demise", 2021, \textit{submitted to Nature}
+\item Blackman, J., Beaulieu, J., Bennett, D. P., \& 11 coauthors including {\bf Terry, S. K.}, ``A Jovian Analog Orbiting a White Dwarf Star", 2021, \textit{submitted to Nature}
 
 \item $^{\dagger}${\bf Terry, S. K.}, ``Breaking a New Degeneracy in High Magnification Microlensing Events", 2021, \textit{American Astronomical Society}, 237, 218.03
 
