--- a/resume.tex
+++ b/resume.tex
@@ -111,6 +111,11 @@ Keck Semester 2021A \\
 Principle Investigator: D. P. Bennett\\
 May 17, 2021 $-$ July 13, 2021
 
+Keck Semester 2020B \\
+``\textit{Confirmation of a Massive Black Hole Microlens Candidate}" \\
+Principle Investigator: D. P. Bennett\\
+August 2, 2020 $-$ August 11, 2020
+
 \section{\sc Observing}
 HST (WFC3/UVIS), 4 orbits \hfill 2021\\
 Keck 10m (NIRC2/OSIRIS), 8 nights \hfill 2019$-$2021\\
