Update panel reviews, grants, invited talks.

--- a/resume.tex
+++ b/resume.tex
@@ -81,6 +81,7 @@ Member $-$ Society for Personality and Social Psychology (SPSP) \hfill 2017$-$20
 Member $-$ Seers Exoplanet Environments Collaboration (SEEC) \hfill 2016$-$2020\\
 \\
 \textbf{Panels and Reviews}\\
+\textit{HST} Cycle 29 \hfill 2021\\
 \textit{TESS} Cycle 4 \hfill 2021\\
 
 \section{\sc Teaching Experience}
@@ -104,7 +105,12 @@ MATHCOUNTS ambadassor \& judge, TJ High School, VA \hfill 2013$-$2014 \\
 Hubble Space Telescope Cycle 28 Grant \#16509 \\
 ``\textit{Detection of the Astrometric Microlensing Signal by the Binary Black Hole Candidate MOA-2019-BLG-284}" \\
 Principle Investigator: S. K. Terry \\
-March 9, 2021 $-$ November 31, 2021
+March 09, 2021 $-$ November 31, 2021
+
+Keck Semester 2021B \\
+``\textit{Finding Black Holes with Astrometric Microlensing}" \\
+Principle Investigator: J. R. Lu\\
+August 03, 2021 $-$ September 03, 2021
 
 Keck Semester 2021A \\
 ``\textit{Testing Core Accretion with Microlens Planet Host Star Masses}" \\
@@ -118,7 +124,7 @@ August 2, 2020 $-$ August 11, 2020
 
 \section{\sc Observing}
 HST (WFC3/UVIS), 4 orbits \hfill 2021\\
-Keck 10m (NIRC2/OSIRIS), 8 nights \hfill 2019$-$2021\\
+Keck 10m (NIRC2/OSIRIS), 9.5 nights \hfill 2019$-$2021\\
 GMU 0.8m, 16 nights \hfill 2013$-$2015 \\
 %\textit{Testing Core Accretion with Microlens Planet Host Star Masses}, Keck 10m, 2 nights \hfill 2021A \\
 %\textit{Confirmation of a Massive Black Hole Candidate}, Keck 10m, assisted 3 nights \hfill 2020B \\
@@ -126,9 +132,12 @@ GMU 0.8m, 16 nights \hfill 2013$-$2015 \\
 %\textit{Development of the WFIRST Mass Measurement Method}, Keck 10m, assisted 2 nights \hfill 2019A \\
 
 \section{\sc Talks \&\\ Proceedings}
-\textbf{12 talks (3 invited$^{\dagger}$, 9 public)}\\
+\textbf{13 talks (4 invited$^{\dagger}$, 9 contributed)}\\
 \begin{etaremune}
+\item $^{\dagger}$``PSF-Reconstruction, AIROPA, and the KAPA Project", University of California Los Angeles, June 2021
+
 \item $^{\dagger}$``A Sub-Saturn Exoplanet Inside the Mass Desert Predicted by Core Accretion", University of Maryland, November 2020
+
 \item ``Roman Space Telescope Mass-measurement Method Determines a Mass of $66 \pm 8M_{\Earth}$ for MOA-2009-BLG-319Lb", Chesapeake Bay Area Exoplanet Meeting (chExo) \#8, June 2020
 
 \item $^{\dagger}$``Comparing HST Observations of Bulge Stars to Galactic Population Synthesis Models in Preparation for the WFIRST Microlensing Survey", NASA GSFC, November 2019 
@@ -179,7 +188,7 @@ $^{\dagger}$ = unrefereed publications \\
 \end{etaremune}
 
 \section{\sc Skills}
-Python, Fortran, IDL, gnu, Git, Bash
+Python, IDL, Fortran, gnu, Git, Bash
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%
