--- a/resume.tex
+++ b/resume.tex
@@ -64,16 +64,17 @@ Berkeley, CA 94720       & \hyperlink{http://w.astro.berkeley.edu/~sean.terry}{h
 \section{\sc Research\\ Areas}
 Gravitational microlensing by exoplanets  \\
 Astrometric microlensing \\
+Adaptive optics \\
 Galactic bulge stellar kinematics and populations  \\
 Computational astrophysics \\
-Adaptive optics \\
 
 
 \section{\sc Service \&\\ Professional Activities}
 \textbf{Professional Activities}\\
+SOC co-chair $-$ KAPA Annual Science Meeting (KASM) \hfill 2021\\
 Project Science Team $-$ Keck All-Sky Precision Adaptive Optics (KAPA) \hfill 2020$-$present\\
 Representative $-$ Annual GSFC Administrator's Congressional Visits \hfill 2016\\
-Local Organizing Committee $-$ 19th International Conference on Microlensing \hfill 2015\\
+LOC $-$ 19th International Conference on Microlensing \hfill 2015\\
 \\
 \textbf{Professional Memberships}\\
 Member $-$ American Astronomical Society (AAS) \hfill 2015$-$present\\
