Updated Bhattacharya et al. 2021 publication.

--- a/resume.tex
+++ b/resume.tex
@@ -97,6 +97,7 @@ Anshula Gandhi $-$ MIT (graduated) \hfill 2015\\
 Mackenzie Kynoch $-$ Dartmouth (graduated) \hfill 2015 \\
 
 \section{\sc Outreach}
+Instructor, AstroTech 2021, University of California Berkeley, Berkeley, CA \hfill 2021 \\
 Guest Speaker, STEM-Day, Garfield High School, Woodbridge, VA \hfill 2017 \\
 CUA Booth, Annual Astronomy Festival on the Mall, Washington, DC \hfill 2015$-$2017 \\
 Proctor, GMU Public Observing Nights, Fairfax, VA \hfill 2013$-$2015 \\
@@ -125,7 +126,7 @@ August 2, 2020 $-$ August 11, 2020
 
 \section{\sc Observing}
 HST (WFC3/UVIS), 4 orbits \hfill 2021\\
-Keck 10m (NIRC2/OSIRIS), 9.5 nights \hfill 2019$-$2021\\
+Keck 10m (NIRC2/OSIRIS), 10.5 nights \hfill 2019$-$2021\\
 GMU 0.8m, 16 nights \hfill 2013$-$2015 \\
 %\textit{Testing Core Accretion with Microlens Planet Host Star Masses}, Keck 10m, 2 nights \hfill 2021A \\
 %\textit{Confirmation of a Massive Black Hole Candidate}, Keck 10m, assisted 3 nights \hfill 2020B \\
@@ -168,9 +169,9 @@ $^{\dagger}$ = unrefereed publications \\
 \begin{etaremune}
 \item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``Using Keck Adaptive Optics to Break the Degeneracies for OGLE-2011-BLG-0950", 2021, \textit{in prep}
 
-\item Bhattacharya, A., Bennett, D. P., Beaulieu, J., \& 11 coauthors including \textbf{Terry, S. K.}, ``MOA-2007-BLG-400Lb: A Super-Jupiter Mass Planet Orbiting a Galactic Bulge K-dwarf Revealed by Keck Adaptive Optics Imaging", 2021, \textit{submitted to AJ}
-
 \item Blackman, J., Beaulieu, J., Bennett, D. P., \& 11 coauthors including {\bf Terry, S. K.}, ``A Jovian Analog Orbiting a White Dwarf Star", 2021, \textit{submitted to Nature}
+
+\item Bhattacharya, A., Bennett, D. P., Beaulieu, J., \& 11 coauthors including \textbf{Terry, S. K.}, ``MOA-2007-BLG-400Lb: A Super-Jupiter Mass Planet Orbiting a Galactic Bulge K-dwarf Revealed by Keck Adaptive Optics Imaging", 2021, \textit{AJ}, 162, 60
 
 \item $^{\dagger}${\bf Terry, S. K.}, ``Breaking a New Degeneracy in High Magnification Microlensing Events", 2021, \textit{American Astronomical Society}, 237, 218.03
 
