--- a/resume.tex
+++ b/resume.tex
@@ -66,7 +66,6 @@ Gravitational microlensing by exoplanets  \\
 Astrometric microlensing \\
 Adaptive optics \\
 Galactic bulge stellar kinematics and populations  \\
-Computational astrophysics \\
 
 
 \section{\sc Service \&\\ Professional Activities}
@@ -77,6 +76,7 @@ Representative $-$ Annual GSFC Administrator's Congressional Visits \hfill 2016\
 LOC $-$ 19th International Conference on Microlensing \hfill 2015\\
 \\
 \textbf{Professional Memberships}\\
+Member $-$ UCLA Galactic Center Group \hfill 2020$-$present\\
 Member $-$ American Astronomical Society (AAS) \hfill 2015$-$present\\
 Member $-$ Society for Personality and Social Psychology (SPSP) \hfill 2017$-$2020\\
 Member $-$ Seers Exoplanet Environments Collaboration (SEEC) \hfill 2016$-$2020\\
@@ -90,9 +90,12 @@ Guest Lecturer (American U.), \textit{Complex Problems Seminar: Exoplanets in Fa
 Teaching Assistant (GMU), \textit{Astronomy for non-STEM Majors} \hfill 2014 \\
 Teaching Assistant (GMU), \textit{Introduction to Astrophysics} \hfill 2013 \\
 
-\section{\sc Mentoring}
+\section{\sc Advising}
+\textbf{Students} \\
+Theo Pedapolu $-$ current: UC Berkeley \hfill 2021 \\
+\\
 \textbf{NASA Goddard Summer Interns} \\
-Ishaan Gandhi $-$ current: Harvey Mudd College \hfill 2016 \\
+Ishaan Gandhi $-$ Harvey Mudd College (graduated) \hfill 2016 \\
 Anshula Gandhi $-$ MIT (graduated) \hfill 2015\\
 Mackenzie Kynoch $-$ Dartmouth (graduated) \hfill 2015 \\
 
@@ -134,8 +137,11 @@ GMU 0.8m, 16 nights \hfill 2013$-$2015 \\
 %\textit{Development of the WFIRST Mass Measurement Method}, Keck 10m, assisted 2 nights \hfill 2019A \\
 
 \section{\sc Talks \&\\ Proceedings}
-\textbf{13 talks (4 invited$^{\dagger}$, 9 contributed)}\\
+\textbf{14 talks (4 invited$^{\dagger}$, 10 contributed)}\\
 \begin{etaremune}
+
+\item ``Direct Mass Measurements for Microlensing Exoplanets", University of California Berkeley, September 2021
+
 \item $^{\dagger}$``PSF-Reconstruction, AIROPA, and the KAPA Project", University of California Los Angeles, June 2021
 
 \item $^{\dagger}$``A Sub-Saturn Exoplanet Inside the Mass Desert Predicted by Core Accretion", University of Maryland, November 2020
@@ -164,16 +170,20 @@ GMU 0.8m, 16 nights \hfill 2013$-$2015 \\
 \end{etaremune}
 
 \section{\sc Publications}
-\textbf{10 total (5 first author)}\\
-$^{\dagger}$ = unrefereed publications \\
+\textbf{9 total (5 first author)}\\
+%$^{\dagger}$ = unrefereed publications \\
 \begin{etaremune}
-\item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``Using Keck Adaptive Optics to Break the Degeneracies for OGLE-2011-BLG-0950", 2021, \textit{in prep}
+\item \textbf{Terry, S. K.}, Lu, J. R., Turri, P., Ciurlo, A., et al. ``AIROPA IV: Validation Tests on Various Science Cases", 2021, \textit{in prep}
 
-\item Blackman, J., Beaulieu, J., Bennett, D. P., \& 11 coauthors including {\bf Terry, S. K.}, ``A Jovian Analog Orbiting a White Dwarf Star", 2021, \textit{submitted to Nature}
+\item \textbf{Terry, S. K.}, Bennett, D. P., Bhattacharya, A., Bond, I.A., et al. ``First Direct Identification of a Multi-Star Microlens System Hosting a Planet", 2021, \textit{in prep}
+
+\item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``A New Method to Break the Central Perturbation Degeneracy in High Magnification Microlensing Events", 2021, \textit{in prep}
+
+\item Blackman, J., Beaulieu, J., Bennett, D. P., \& 11 coauthors including {\bf Terry, S. K.}, ``A Jovian Analog Orbiting a White Dwarf Star", 2021, \textit{Nature}, 598, 272
 
 \item Bhattacharya, A., Bennett, D. P., Beaulieu, J., \& 11 coauthors including \textbf{Terry, S. K.}, ``MOA-2007-BLG-400Lb: A Super-Jupiter Mass Planet Orbiting a Galactic Bulge K-dwarf Revealed by Keck Adaptive Optics Imaging", 2021, \textit{AJ}, 162, 60
 
-\item $^{\dagger}${\bf Terry, S. K.}, ``Breaking a New Degeneracy in High Magnification Microlensing Events", 2021, \textit{American Astronomical Society}, 237, 218.03
+%\item $^{\dagger}${\bf Terry, S. K.}, ``Breaking a New Degeneracy in High Magnification Microlensing Events", 2021, \textit{American Astronomical Society}, 237, 218.03
 
 \item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``MOA-2009-BLG-319Lb: A Sub-Saturn Planet Inside the Predicted Mass Desert", 2021, \textit{AJ}, 161, 54
 
@@ -181,11 +191,11 @@ $^{\dagger}$ = unrefereed publications \\
 
 \item Bennett, D. P., Bhattacharya, A., Beaulieu, J., \& 9 coauthors including {\bf Terry, S. K.}, ``Keck Observations Confirm a Super-Jupiter Planet Orbiting M-dwarf OGLE-2005-BLG-071L", 2020, \textit{AJ}, 159, 68
 
-\item $^{\dagger}${\bf Terry, S. K.}, ``Direct Mass Measurements for Planets Discovered by Gravitational Microlensing", 2020, \textit{American Astronomical Society}, 235, 402.01
+%\item $^{\dagger}${\bf Terry, S. K.}, ``Direct Mass Measurements for Planets Discovered by Gravitational Microlensing", 2020, \textit{American Astronomical Society}, 235, 402.01
 
 \item Bennett, D. P., Bhattacharya, A., Anderson, J., \& 15 coauthors including {\bf Terry, S. K.}, ``Confirmation of the Planetary Microlensing Signal and Star and Planet Mass Determinations for Event OGLE-2005-BLG-169", 2015, \textit{ApJ}, 808, 169
 
-\item $^{\dagger}$Gilbert, E., {\bf Terry, S. K.}, Pfeifle, R, ``A New Luminosity Function for Stars in the Galactic Bulge", 2015, \textit{American Astronomical Society}, 225, 102.02 \\
+%\item $^{\dagger}$Gilbert, E., {\bf Terry, S. K.}, Pfeifle, R, ``A New Luminosity Function for Stars in the Galactic Bulge", 2015, \textit{American Astronomical Society}, 225, 102.02 \\
 
 \end{etaremune}
 
