file structure update

--- a/cv.tex
+++ b/cv.tex
@@ -1,4 +1,4 @@
-\documentclass[margin,line]{res}
+\documentclass[margin,line]{cv}
 \usepackage{hyperref}
 \usepackage{url}
 \oddsidemargin -.5in
@@ -173,7 +173,7 @@ GMU 0.8m, 16 nights \hfill 2013$-$2015 \\
 \textbf{9 total (5 first author)}\\
 %$^{\dagger}$ = unrefereed publications \\
 \begin{etaremune}
-\item \textbf{Terry, S. K.}, Lu, J. R., Turri, P., Ciurlo, A., et al. ``AIROPA IV: Validation Tests on Various Science Cases", 2021, \textit{in prep}
+\item \textbf{Terry, S. K.}, Lu, J. R., Turri, P., Ciurlo, A., et al. ``AIROPA IV: Validation with Various Science Cases", 2021, \textit{in prep}
 
 \item \textbf{Terry, S. K.}, Bennett, D. P., Bhattacharya, A., Bond, I.A., et al. ``First Direct Identification of a Multi-Star Microlens System Hosting a Planet", 2021, \textit{in prep}
 
