--- a/cv.tex
+++ b/cv.tex
@@ -200,7 +200,7 @@ GMU 0.8m, 16 nights \hfill 2013$-$2015 \\
 \end{etaremune}
 
 \section{\sc Skills}
-Python, IDL, Fortran, gnu, Git, Bash
+\texttt{Python, FORTRAN, IDL, gnu, Git, Bash, HTML5, C++}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%
