Add December2021 talk.

--- a/cv.tex
+++ b/cv.tex
@@ -45,7 +45,7 @@
 \begin{tabular}{@{}p{3.5in}p{3in}}
 Department of Astronomy      & Email: \,\,\,sean.terry@berkeley.edu \\
 501 Campbell Hall \#3411       &  Github: \hyperlink{https://github.com/skterry}{skterry} \\
-Berkeley, CA 94720       & \hyperlink{http://w.astro.berkeley.edu/~sean.terry}{http://w.astro.berkeley.edu/$\sim$sean.terry}\\
+Berkeley, CA 94720       & \hyperlink{http://skterry.github.io}{http://skterry.github.io}\\
  \\
 \end{tabular}
 
@@ -70,13 +70,13 @@ Galactic bulge stellar kinematics and populations  \\
 
 \section{\sc Service \&\\ Professional Activities}
 \textbf{Professional Activities}\\
-SOC co-chair $-$ KAPA Annual Science Meeting (KASM) \hfill 2021\\
+SOC Co-Chair $-$ KAPA Annual Science Meeting (KASM) \hfill 2021\\
+Collaborator $-$ UCLA Galactic Center Group \hfill 2020$-$present\\
 Project Science Team $-$ Keck All-Sky Precision Adaptive Optics (KAPA) \hfill 2020$-$present\\
 Representative $-$ Annual GSFC Administrator's Congressional Visits \hfill 2016\\
 LOC $-$ 19th International Conference on Microlensing \hfill 2015\\
 \\
 \textbf{Professional Memberships}\\
-Member $-$ UCLA Galactic Center Group \hfill 2020$-$present\\
 Member $-$ American Astronomical Society (AAS) \hfill 2015$-$present\\
 Member $-$ Society for Personality and Social Psychology (SPSP) \hfill 2017$-$2020\\
 Member $-$ Seers Exoplanet Environments Collaboration (SEEC) \hfill 2016$-$2020\\
@@ -137,8 +137,10 @@ GMU 0.8m, 16 nights \hfill 2013$-$2015 \\
 %\textit{Development of the WFIRST Mass Measurement Method}, Keck 10m, assisted 2 nights \hfill 2019A \\
 
 \section{\sc Talks \&\\ Proceedings}
-\textbf{14 talks (4 invited$^{\dagger}$, 10 contributed)}\\
+\textbf{15 talks (5 invited$^{\dagger}$, 10 contributed)}\\
 \begin{etaremune}
+
+\item ``Discovering and Characterizing Exoplanets", Universidad Nacional Autónoma de Honduras, December 2021
 
 \item ``Direct Mass Measurements for Microlensing Exoplanets", University of California Berkeley, September 2021
 
