Invited talk Univ. of Honduras.

--- a/cv.tex
+++ b/cv.tex
@@ -140,7 +140,7 @@ GMU 0.8m, 16 nights \hfill 2013$-$2015 \\
 \textbf{15 talks (5 invited$^{\dagger}$, 10 contributed)}\\
 \begin{etaremune}
 
-\item ``Discovering and Characterizing Exoplanets", Universidad Nacional Autónoma de Honduras, December 2021
+\item $^{\dagger}$``Discovering and Characterizing Exoplanets", Universidad Nacional Autónoma de Honduras, December 2021
 
 \item ``Direct Mass Measurements for Microlensing Exoplanets", University of California Berkeley, September 2021
 
