--- a/cv.tex
+++ b/cv.tex
@@ -44,7 +44,7 @@
 \vspace{.05in}
 \begin{tabular}{@{}p{3.5in}p{3in}}
 Department of Astronomy      & Email: \,\,\,sean.terry@berkeley.edu \\
-501 Campbell Hall \#3411       &  Github: \hyperlink{https://github.com/skterry}{skterry} \\
+207 Campbell Hall       &  Github: \hyperlink{https://github.com/skterry}{skterry} \\
 Berkeley, CA 94720       & \hyperlink{http://skterry.github.io}{http://skterry.github.io}\\
  \\
 \end{tabular}
@@ -62,10 +62,10 @@ Berkeley, CA 94720       & \hyperlink{http://skterry.github.io}{http://skterry.g
 {\bf Northern Virginia Community College}, A.S., Gen. Science \hfill 2012\\
 
 \section{\sc Research\\ Areas}
-Gravitational microlensing by exoplanets  \\
+Adaptive optics \& instrumentation \\
+Gravitational microlensing by exoplanets \& black holes  \\
 Astrometric microlensing \\
-Adaptive optics \\
-Galactic bulge stellar kinematics and populations  \\
+Galactic bulge stellar kinematics \& populations  \\
 
 
 \section{\sc Service \&\\ Professional Activities}
@@ -81,36 +81,51 @@ Member $-$ American Astronomical Society (AAS) \hfill 2015$-$present\\
 Member $-$ Society for Personality and Social Psychology (SPSP) \hfill 2017$-$2020\\
 Member $-$ Seers Exoplanet Environments Collaboration (SEEC) \hfill 2016$-$2020\\
 \\
-\textbf{Panels and Reviews}\\
+\textbf{Panels \& Reviews}\\
 \textit{HST} Cycle 29 \hfill 2021\\
 \textit{TESS} Cycle 4 \hfill 2021\\
 
-\section{\sc Teaching Experience}
+\section{\sc Teaching}
 Guest Lecturer (American U.), \textit{Complex Problems Seminar: Exoplanets in Fact \& Fiction} \hfill 2019 \\
 Teaching Assistant (GMU), \textit{Astronomy for non-STEM Majors} \hfill 2014 \\
 Teaching Assistant (GMU), \textit{Introduction to Astrophysics} \hfill 2013 \\
 
 \section{\sc Advising}
-\textbf{Students} \\
-Theo Pedapolu $-$ current: UC Berkeley \hfill 2021 \\
+\textbf{High School Students} \\
+Viveka Chaudry $-$ current: Sidwell Friends School \hfill 2022 \\
 \\
-\textbf{NASA Goddard Summer Interns} \\
+\textbf{Undergraduates} \\
+Theo Pedapolu $-$ current: UC Berkeley \hfill 2021$-$2022 \\
+\\
+\textbf{NASA Summer Interns} \\
 Ishaan Gandhi $-$ Harvey Mudd College (graduated) \hfill 2016 \\
 Anshula Gandhi $-$ MIT (graduated) \hfill 2015\\
-Mackenzie Kynoch $-$ Dartmouth (graduated) \hfill 2015 \\
+%Mackenzie Kynoch $-$ Dartmouth (graduated) \hfill 2015 \\
 
 \section{\sc Outreach}
-Instructor, AstroTech 2021, University of California Berkeley, Berkeley, CA \hfill 2021 \\
+Instructor, AstroTech, University of California Berkeley, Berkeley, CA \hfill 2021$-$2022 \\
 Guest Speaker, STEM-Day, Garfield High School, Woodbridge, VA \hfill 2017 \\
 CUA Booth, Annual Astronomy Festival on the Mall, Washington, DC \hfill 2015$-$2017 \\
 Proctor, GMU Public Observing Nights, Fairfax, VA \hfill 2013$-$2015 \\
 MATHCOUNTS ambadassor \& judge, TJ High School, VA \hfill 2013$-$2014 \\
 
 \section{\sc Grants \\ Awarded}
+\textbf{Lead or Co-lead} \\
+Hubble Space Telescope Multi-Cycle Grant \#17081 \\
+``\textit{Mass Measurement of a Candidate Balck Hole Microlens with Systematic Error Control}" \\
+Principle Investigator: D. P. Bennett/S. K. Terry (co-PI) \\
+October 01, 2022 $-$ November 30, 2025
+
 Hubble Space Telescope Cycle 28 Grant \#16509 \\
 ``\textit{Detection of the Astrometric Microlensing Signal by the Binary Black Hole Candidate MOA-2019-BLG-284}" \\
 Principle Investigator: S. K. Terry \\
-March 09, 2021 $-$ November 31, 2021
+April 05, 2021 $-$ September 30, 2021
+
+\textbf{Co-Investigator} \\
+Keck Semester 2022B \\
+``\textit{Finding Black Holes with Astrometric Microlensing}" \\
+Principle Investigator: J. R. Lu\\
+August 02, 2022 $-$ September 02, 2022
 
 Keck Semester 2021B \\
 ``\textit{Finding Black Holes with Astrometric Microlensing}" \\
@@ -127,6 +142,11 @@ Keck Semester 2020B \\
 Principle Investigator: D. P. Bennett\\
 August 2, 2020 $-$ August 11, 2020
 
+Hubble Space Telescope Cycle 27 Grant \#16067 \\
+``\textit{Mass Measurement of Isolated Black Hole Candidate MOA-2019-BLG-284L via Lensed Image Separation}" \\
+Principle Investigator: D. P. Bennett \\
+March 13, 2020 $-$ September 14, 2020
+
 \section{\sc Observing}
 HST (WFC3/UVIS), 4 orbits \hfill 2021\\
 Keck 10m (NIRC2/OSIRIS), 10.5 nights \hfill 2019$-$2021\\
@@ -137,8 +157,11 @@ GMU 0.8m, 16 nights \hfill 2013$-$2015 \\
 %\textit{Development of the WFIRST Mass Measurement Method}, Keck 10m, assisted 2 nights \hfill 2019A \\
 
 \section{\sc Talks \&\\ Proceedings}
-\textbf{15 talks (5 invited$^{\dagger}$, 10 contributed)}\\
+\textbf{16 talks (6 invited$^{\dagger}$, 10 contributed)}\\
 \begin{etaremune}
+
+\item $^{\dagger}$``Directly Measuring the Mass of Microlensing Exoplanets with the Roman Space
+Telescope", University of California San Diego, January 2022
 
 \item $^{\dagger}$``Discovering and Characterizing Exoplanets", Universidad Nacional Autónoma de Honduras, December 2021
 
@@ -172,14 +195,20 @@ GMU 0.8m, 16 nights \hfill 2013$-$2015 \\
 \end{etaremune}
 
 \section{\sc Publications}
-\textbf{9 total (5 first author)}\\
+\textbf{11 total (4 first author)}\\
 %$^{\dagger}$ = unrefereed publications \\
 \begin{etaremune}
-\item \textbf{Terry, S. K.}, Lu, J. R., Turri, P., Ciurlo, A., et al. ``AIROPA IV: Validation with Various Science Cases", 2021, \textit{in prep}
+%\item \textbf{Terry, S. K.}, Bennett, D. P., Bhattacharya, A., Bond, I.A., et al. ``First Direct Identification of a Multi-Star Microlens System Hosting a Planet", 2022, \textit{in prep}
 
-\item \textbf{Terry, S. K.}, Bennett, D. P., Bhattacharya, A., Bond, I.A., et al. ``First Direct Identification of a Multi-Star Microlens System Hosting a Planet", 2021, \textit{in prep}
+\item \textbf{Terry, S. K.}, Lu, J. R., Turri, P., Ciurlo, A., et al. ``AIROPA IV: Validation with Various Science Cases", 2022, \textit{in prep}
 
-\item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``A New Method to Break the Central Perturbation Degeneracy in High Magnification Microlensing Events", 2021, \textit{in prep}
+\item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``Adaptive Optics Imaging Breaks the Central Caustic Cusp Approach Degeneracy in High Magnification Microlensing Events", 2022, \textit{submitted}
+
+\item Turri, P., Lu, J. R., Witzel, G., \& 7 coauthors including \textbf{Terry, S. K.}, ``AIROPA III: Testing Simulated and On-Sky Data", 2022, \textit{submitted}
+
+\item Ciurlo, A., Turri, P., Witzel, G., \& 12 coauthors including \textbf{Terry, S. K.}, ``AIROPA II: Modeling Instrumental Aberrations for Off-Axis Point Spread Functions in Adaptive Optics", 2022, \textit{submitted}
+
+\item Lam, C., Lu, J. R., Udalski, A., \& 44 coauthors including {\bf Terry, S. K.}, ``An Isolated Mass Gap Black Hole or Neutron Star Detected with Astrometric Microlensing", 2022, \textit{ApJ Accepted}
 
 \item Blackman, J., Beaulieu, J., Bennett, D. P., \& 11 coauthors including {\bf Terry, S. K.}, ``A Jovian Analog Orbiting a White Dwarf Star", 2021, \textit{Nature}, 598, 272
 
