--- a/cv.tex
+++ b/cv.tex
@@ -65,7 +65,7 @@ Berkeley, CA 94720       & \hyperlink{http://skterry.github.io}{http://skterry.g
 Adaptive optics \& instrumentation \\
 Gravitational microlensing by exoplanets \& black holes  \\
 Astrometric microlensing \\
-Galactic bulge stellar kinematics \& populations  \\
+Galactic bulge stellar populations  \\
 
 
 \section{\sc Service \&\\ Professional Activities}
@@ -200,7 +200,7 @@ Telescope", University of California San Diego, January 2022
 \begin{etaremune}
 %\item \textbf{Terry, S. K.}, Bennett, D. P., Bhattacharya, A., Bond, I.A., et al. ``First Direct Identification of a Multi-Star Microlens System Hosting a Planet", 2022, \textit{in prep}
 
-\item \textbf{Terry, S. K.}, Lu, J. R., Turri, P., Ciurlo, A., et al. ``AIROPA IV: Validation with Various Science Cases", 2022, \textit{in prep}
+\item \textbf{Terry, S. K.}, Lu, J. R., Turri, P., Ciurlo, A., et al. ``AIROPA IV: Validating Point Spread Function Reconstruction on Various Science Cases", 2022, \textit{in prep}
 
 \item \textbf{Terry, S. K.}, Bhattacharya, A., Bennett, D. P., Bond, I.A., et al. ``Adaptive Optics Imaging Breaks the Central Caustic Cusp Approach Degeneracy in High Magnification Microlensing Events", 2022, \textit{submitted}
 
